@@ -1,3 +1,8 @@
+2006-01-17  Luca Cavalli  <loopback@slackit.org>
+
+	* gnome-da-xml.c: (gnome_da_xml_get_string): load translated XML
+	application description, if available. Closes bug #327221.
+
 2006-01-16  Rodrigo Moya <rodrigo@novell.com>
 
 	* gnome-da-xml.c (gnome_da_xml_load_list): just read the file
